<resources>
    <string name="app_name">iSearch</string>
    <string name="title_item_detail">Movie Details</string>
    <string name="track_name">Track Name</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <string name="movie_artwork">Movie artwork</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et tellus at urna ultricies dapibus non vel tortor. Nunc tellus ligula, sollicitudin eu tempor nec, elementum in justo. Pellentesque luctus in dui at aliquam. Integer convallis sit amet erat eget consequat. Curabitur cursus sapien nisi, ut porta nibh suscipit nec. Phasellus ut malesuada ipsum. Proin tincidunt nulla eget dui blandit sagittis. Quisque tincidunt diam id orci pretium, sit amet mattis dui porttitor.</string>
    <string name="select_a_movie_to_see_its_details">Select a movie to see its details</string>
    <string name="failed_to_retrieve_movies_please_swipe_down_to_retry">Failed to retrieve movies.\nPlease swipe down to retry.</string>
    <string name="arrow_pointing_down">Arrow pointing down</string>

    <string name="preference_file">Preference File</string>
    <string name="last_user_visit_timestamp">Last User Visit Timestamp</string>
    <string name="last_user_visit_timestamp_format">Last Visit: %1$s</string>
    <string name="first_visit">First Visit</string>
</resources>