<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="au.com.appetiser.isearch.moviedetail.MovieDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_detail_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:movieArtwork="@{viewModel.movie.artworkUrl100}"
            app:srcCompat="@drawable/ic_baseline_movie_24"
            android:contentDescription="@string/movie_artwork" />

        <TextView
            android:id="@+id/movie_detail_trackname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.movie.trackName}"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/track_name" />

        <TextView
            android:id="@+id/movie_detail_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.movie.primaryGenreName}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_trackname"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/movie_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{String.valueOf(viewModel.movie.trackPrice)}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_genre"
            tools:text="@string/price" />

        <TextView
            android:id="@+id/movie_detail_long_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.movie.longDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_image"
            tools:text="@string/lorem_ipsum" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>